test/success/integration/_succ_lformarg_1.hs
x' :: Char -> Char -> Char -> Char
x' y' z w = 'a'
main = print (x' 'a' 'b' 'c')