test/fail/unit/_fail_sem_actarg_3.hs
x :: Int -> Int
x y = y
w :: Bool
w = True
z :: Int
z = x w
main = print "hello"